# obs-image-manipulation

./: .gitignore  CMakeLists.txt  README.md  build_plugin.sh  config.cfg.example  image-manipulation.cpp  image-manipulation.h.in  image-manipulation.hpp
cmake/: FindLibobs.cmake
data/locale/: en-GB.ini
src/: image-manipulation-plugin.cpp  image-manipulation.cpp
src/sources/: image-manipulation-source.cpp  image-manipulation-source.hpp  text.cpp
